feat: use newer stream api methods